# django-simple-blog

./: .coveragerc  .flake8  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
apps/core/: context_processors.py  fields.py  models.py  urls.py  views.py
apps/main/: admin.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py
apps/main/models/: link.py  menu.py
apps/main/templatetags/: links.py  menus.py
apps/posts/: admin.py  sitemaps.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_post_is_page.py  0003_alter_category_slug_alter_post_slug.py  0004_post_published.py  0005_auto_20220611_1538.py  0006_alter_post_options_post_use_comment_and_more.py
apps/posts/models/: __init__.py  category.py  factory.py  post.py  tag.py
apps/posts/templatetags/: categories.py  post_markdown.py  posts.py  utterances.py
config/: README.md  urls.py  wsgi.py
config/settings/: README.md  base.py  django.py  utils.py
config/settings/environ/: local.py  production.py
static/css/: blog.css  markdown.css
templates/: base.html
templates/errors/: 404.html
templates/layout/: base.html  sidebar.html
templates/main/: link.html  menu.html
templates/posts/: categories.html  post_detail.html  post_list.html  recent_posts.html  utterances.html
tests/: post_tests.py
